adding some minor styes and fixing word count

--- a/template/src/components/pages/Article/ArticleDisplay.css
+++ b/template/src/components/pages/Article/ArticleDisplay.css
@@ -5,6 +5,7 @@
     border: 1px solid #000;
     margin: 30px auto;
     padding: 20px;
+    background-color: #FFF;
 }
 .main_image {
     float: left;
