--- a/template/src/components/pages/CreateBlog/BlogCreateDisplay.css
+++ b/template/src/components/pages/CreateBlog/BlogCreateDisplay.css
@@ -1,10 +1,12 @@
 #create_display {
     min-width: 200px;
-    min-height: 1000px;
     max-width: 800px;
-    border: 1px solid #000;
-    margin: 30px auto;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    margin: 30px auto 0;
     padding: 20px;
+    background-color: #FFF;
+    border: 5px solid #487092;
 }
 input { 
     width: 99%;
@@ -59,5 +61,14 @@ label {
     flex: 1;
 }
 .word_count_span, .character_count_span { 
-    color: #009205;
+    color: #000;
+}
+.default_shading {
+    background-color: #e4e4e4;
+    border-radius: 15px;
+    padding: 10px 17px 17px 10px;
+    margin: 10px 0;
+}
+.error {
+    color: red;
 }
