--- a/template/src/components/Card/Card.css
+++ b/template/src/components/Card/Card.css
@@ -11,6 +11,7 @@
     flex: 1;
     background-position: center;
     background-size: cover;
+    background-repeat: no-repeat;
 }
 .card_text {
     flex: 3;
