--- a/template/src/components/pages/CreateBlog/BlogCreateDisplay.css
+++ b/template/src/components/pages/CreateBlog/BlogCreateDisplay.css
@@ -106,3 +106,17 @@ label {
     font-size: 18px;
     margin: 10px auto;
 }
+.submit_form {
+    background-image: linear-gradient(#4f93ce, #285f8f);
+    padding: 2px 20px 2px;
+    color: #FFF;
+    font-size: 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+    max-width: 400px;
+    margin: 10px auto;    
+}
+.submit_form:hover {
+    background-image: linear-gradient(#63a0d4, #337ab7);
+}
