--- a/template/src/components/pages/CreateBlog/BlogCreateDisplay.css
+++ b/template/src/components/pages/CreateBlog/BlogCreateDisplay.css
@@ -49,6 +49,7 @@ label {
     float: right;
     border: none;
     cursor: pointer;
+    font-size: 15px;
 }
 .exit:hover {
     background-image: linear-gradient(rgb(234, 71, 71), #8F2727);
@@ -85,7 +86,7 @@ label {
 }
 .upload_btn {
     background-image: linear-gradient(#4f93ce, #285f8f);
-    padding: 7px 5px 10px;
+    padding: 7px 5px 40px;
     color: #FFF;
     font-size: 18px;
     border-radius: 5px;
