--- a/template/src/components/Header/Header.css
+++ b/template/src/components/Header/Header.css
@@ -18,3 +18,8 @@ header {
 .link a {
     color: #FFF;
 }
+@media only screen and (max-width: 600px) {
+    .header_links  {
+        display: none;
+    }  
+}
