--- a/template/src/components/pages/CreateBlog/BlogCreateDisplay.css
+++ b/template/src/components/pages/CreateBlog/BlogCreateDisplay.css
@@ -132,14 +132,19 @@ label {
 }
 .action_btn {
     background-image: linear-gradient(#4f93ce, #285f8f);
-    padding: 2px 5px 2px;
+    padding: 0;
     color: #FFF;
     font-size: 14px;
     border-radius: 5px;
     cursor: pointer;
     text-align: center;
-    max-width: 400px;    
+    max-width: 400px;
+    min-width: 30px;
 }
 .action_btn:hover {
     background-image: linear-gradient(#63a0d4, #337ab7);
+}
+.fa {
+    z-index: 1000;
+    position: relative;
 }
